--- a/category-show/src/component/category/category.module.scss
+++ b/category-show/src/component/category/category.module.scss
@@ -1,37 +1,108 @@
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    gap: 1rem;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Noto+Sans+TC:wght@300&family=Noto+Sans:wght@200&display=swap");
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  //   border: 1px black;
+  //   border-style: solid;
+  padding: 50px;
 }
 
-.gridbox{
-    background-color: dodgerblue;
-    color: white;
-    padding: 1rem;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width:300px;
-    height:400px;
+.gridbox {
+  padding: 1rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  background-color: #ebeeef;
 
+  border-radius: 5px;
+  font-family: "Noto Sans TC", sans-serif;
 }
 
-.productimage{
-    width:300px;
-    height:300px;
-    background-color: white;
+.gridboxIsNotPreviewed {
+  height: 400px;
+}
 
+.gridboxIsPreviewed {
+  height: 500px;
+}
+
+.gridboxIsNotSelected {
+  color: black;
+  border: black;
+}
+
+.gridoxIsSelected {
+  background-color: black;
+  color: white;
+}
+
+.productimage {
+  width: 300px;
+  height: 300px;
+  background-color: white;
 }
 
 @media (min-width: 600px) {
-    .container { grid-template-columns: repeat(2, 1fr); }
-    .gridbox{
-    }
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    font-family: "Muli", sans-serif;
   }
-
-
-  @media (min-width: 900px) {
-    .container  { grid-template-columns: repeat(3, 1fr); }
-    .gridbox{}
+  .gridbox {
   }
+}
+
+@media (min-width: 900px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .gridbox {
+  }
+}
+
+.buttonlist {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  width: 100px;
+  color: white;
+  border: none;
+  text-decoration: none;
+  background: #5000ff;
+  text-align: center;
+  padding: 16px 18px 14px;
+  margin: 10px;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  transition: all 0.1s;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.button:active {
+  -webkit-box-shadow: 0px 2px 0px #2a0384;
+  -moz-box-shadow: 0px 2px 0px #2a0384;
+  box-shadow: 0px 2px 0px #2a0384;
+  position: relative;
+  top: 4px;
+}
+
+.button:hover {
+  background-color: grey;
+  color: white;
+}
+
+/*item*/
+.item_container {
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 1rem;
+  border: 1px black;
+  border-style: solid;
+  padding: 50px;
+  justify-content: center;
+}
