chore : change produc tcomponent

--- a/category-show/src/component/category/category.module.scss
+++ b/category-show/src/component/category/category.module.scss
@@ -4,9 +4,9 @@
   margin: 0 auto;
   display: grid;
   gap: 1rem;
-  //   border: 1px black;
-  //   border-style: solid;
+
   padding: 50px;
+  list-style-type:none;
 }
 
 .gridbox {
