--- a/needsuqqort/src/Catalog.css
+++ b/needsuqqort/src/Catalog.css
@@ -5,12 +5,14 @@
     width: 30%;
     margin: 10px 10px 10px 10px;
     float: left;
-    /* position: relative; */
+    position: relative;
     align-items: center;
 }
 
 .img{
     text-align: center;
+    width: 300px;
+    width: 300px;
 }
 
 
@@ -22,14 +24,19 @@
     font-size: 24;
 }
 
-.price{
+.price,.detail-price,.instock{
     font-size: 24;
     width: 50%;
+    position: relative;
+    margin-left: 10px;
 }
 
 .desc,.summary{
     float: left;
-    width: 50%;
+    width: 48%;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px 10px 10px 10px;
+    position: relative;
 }
 
 .preview-data{
